--- a/index.html
+++ b/index.html
@@ -9,6 +9,28 @@
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>AluraBook</h1>
+    <header class="cabecalho">
+      <div class="container">
+        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+        <img src="img/Logo.svg" alt="Logo da AluraBooks" />
+      </div>
+      <div class="container">
+        <a href="#"
+          ><img
+            src="img/Favoritos.svg"
+            alt="meusfavoritos"
+            class="container__imagem"
+        /></a>
+        <a href="#"
+          ><img
+            src="img/Compras.svg"
+            alt="minhascompras"
+            class="container__imagem"
+        /></a>
+        <a href="#"
+          ><img src="img/Usuário.svg" alt="usuario" class="container__imagem"
+        /></a>
+      </div>
+    </header>
   </body>
 </html>
