--- a/index.html
+++ b/index.html
@@ -11,7 +11,25 @@
   <body>
     <header class="cabecalho">
       <div class="container">
-        <span class="cabecalho__menu-hamburguer container__imagem"></span>
+        <input type="checkbox" id="menu" class="container__botao" />
+        <label for="menu">
+          <span class="cabecalho__menu-hamburguer container__imagem"></span>
+        </label>
+        <ul class="lista-menu">
+          <li class="lista-menu__titulo">Categorias</li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Programacao</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Front-End</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Business</a>
+          </li>
+          <li class="lista-menu__item">
+            <a href="#" class="lista-menu__link">Desing & UX</a>
+          </li>
+        </ul>
         <img src="img/Logo.svg" alt="Logo da AluraBooks" />
       </div>
       <div class="container">
