--- a/index.html
+++ b/index.html
@@ -5,15 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AluraBooks</title>
+    <link rel="stylesheet" href="reset.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Krona+One&family=Poppins:wght@300;400;500;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="reset.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
+
   <body>
     <header class="cabecalho">
       <div class="container">
@@ -67,5 +72,40 @@
         placeholder="Qual será sua próxima leitura?"
       />
     </section>
+    <section class="carrossel">
+      <h2 class="carrossel__titulo">Novos Lancamentos</h2>
+      <div class="swiper">
+        <div class="swiper-pagination"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" /></div>
+          <div class="swiper-slide">
+            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" /></div>
+          <div class="swiper-slide">
+            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" /></div>
+            <div class="swiper-slide">
+                <img src="img/Guia Front-end.svg" alt="Livro sobre Guia Front-end" /></div>
+                <div class="swiper-slide">
+                    <img src="img/Portugol.svg" alt="Livro sobre Portugol" /></div>
+                    <div class="swiper-slide">
+                        <img src="img/Acessibilidade.svg" alt="Livro sobre ACessibilidade" />
+          </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+        <div class="swiper-scrollbar"></div>
+      </div>
+    </section>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+    <script>
+        const swiper = new Swiper('.swiper', {
+            spaceBetween: 10,
+            slidesPerView: 3,
+            pagination: {
+    el: '.swiper-pagination',
+    type: 'bullets',
+  },
+
+        });
+    </script>
   </body>
 </html>
