--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       />
     </section>
     <section class="carrossel">
-      <h2 class="carrossel__titulo">Novos Lancamentos</h2>
+      <h2 class="carrossel__titulo">ÚLTIMOS LANÇAMENTOS</h2>
       <div class="swiper">
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
@@ -92,7 +92,23 @@
           </div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
-        <div class="swiper-scrollbar"></div>
+      </div>
+      <div class="card">
+        <div class="card__descricao">
+          <div class="descricao">
+            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+            <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
+            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+          </div>
+          <img src="img/Angular.svg" class="descricao__imagem" alt="Imagem Angular">
+        </div>
+        <div class="card__botoes">
+          <ul class="botoes">
+            <li class="botoes__item"><img src= "img/Favoritos.svg" alt="Favoritar livro"</li>
+            <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+          </ul>
+          <a href="#" class="botoes__ancora">Saiba mais</a>
+        </div>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
