--- a/index.html
+++ b/index.html
@@ -111,6 +111,45 @@
         </div>
       </div>
     </section>
+    <section class="carrossel2">
+      <h2 class="carrossel2__titulo">MAIS VENDIDOS</h2>
+      <div class="swiper">
+        <div class="swiper-pagination"></div>
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" /></div>
+          <div class="swiper-slide">
+            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" /></div>
+          <div class="swiper-slide">
+            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" /></div>
+            <div class="swiper-slide">
+                <img src="img/Guia Front-end.svg" alt="Livro sobre Guia Front-end" /></div>
+                <div class="swiper-slide">
+                    <img src="img/Portugol.svg" alt="Livro sobre Portugol" /></div>
+                    <div class="swiper-slide">
+                        <img src="img/Acessibilidade.svg" alt="Livro sobre ACessibilidade" />
+          </div>
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+      </div>
+      <div class="card2">
+        <div class="card2__descricao">
+          <div class="descricao2">
+            <h3 class="descricao2__titulo">Autora do Mês</h3>
+            <h2 class="descricao2__titulo-livro">Amanda Campos</h2>
+            <p class="descricao2__texto">Estudante de Engenharia de Software com foco em  Front-End. </p>
+          </div>
+          <img src="img/amanda.svg" class="descricao2__imagem" alt="Imagem Angular">
+        </div>
+        <div class="card2__botoes">
+          <ul class="botoes2">
+            <li class="botoes2__item"><img src= "img/Favoritos.svg" alt="Favoritar livro"</li>
+            <li class="botoes2__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+          </ul>
+          <a href="#" class="botoes2__ancora">Saiba mais</a>
+        </div>
+      </div>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
         const swiper = new Swiper('.swiper', {
