Lista de topicos

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -18,7 +18,6 @@
     />
     <link rel="stylesheet" href="styles.css" />
   </head>
-
   <body>
     <header class="cabecalho">
       <div class="container">
@@ -78,34 +77,61 @@
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" /></div>
-          <div class="swiper-slide">
-            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" /></div>
-          <div class="swiper-slide">
-            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" /></div>
-            <div class="swiper-slide">
-                <img src="img/Guia Front-end.svg" alt="Livro sobre Guia Front-end" /></div>
-                <div class="swiper-slide">
-                    <img src="img/Portugol.svg" alt="Livro sobre Portugol" /></div>
-                    <div class="swiper-slide">
-                        <img src="img/Acessibilidade.svg" alt="Livro sobre ACessibilidade" />
+            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" />
           </div>
+          <div class="swiper-slide">
+            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="img/Guia Front-end.svg"
+              alt="Livro sobre Guia Front-end"
+            />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Portugol.svg" alt="Livro sobre Portugol" />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="img/Acessibilidade.svg"
+              alt="Livro sobre ACessibilidade"
+            />
+          </div>
+        </div>
         <div class="swiper-button-prev"></div>
         <div class="swiper-button-next"></div>
       </div>
       <div class="card">
         <div class="card__descricao">
           <div class="descricao">
-            <h3 class="descricao__titulo">Talvez você também se interesse por...</h3>
+            <h3 class="descricao__titulo">
+              Talvez você também se interesse por...
+            </h3>
             <h2 class="descricao__titulo-livro">Angular 11 e Firebase</h2>
-            <p class="descricao__texto">Construindo uma aplicação integrada com a plataforma do Google.</p>
+            <p class="descricao__texto">
+              Construindo uma aplicação integrada com a plataforma do Google.
+            </p>
           </div>
-          <img src="img/Angular.svg" class="descricao__imagem" alt="Imagem Angular">
+          <img
+            src="img/Angular.svg"
+            class="descricao__imagem"
+            alt="Imagem Angular"
+          />
         </div>
         <div class="card__botoes">
           <ul class="botoes">
-            <li class="botoes__item"><img src= "img/Favoritos.svg" alt="Favoritar livro"</li>
-            <li class="botoes__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+            <li class="botoes__item">
+              <img src= "img/Favoritos.svg" alt="Favoritar livro"
+            </li>
+            <li class="botoes__item">
+              <img
+                src="img/Compras.svg"
+                alt="Adicionar no carrinho de compras"
+              />
+            </li>
           </ul>
           <a href="#" class="botoes__ancora">Saiba mais</a>
         </div>
@@ -117,50 +143,100 @@
         <div class="swiper-pagination"></div>
         <div class="swiper-wrapper">
           <div class="swiper-slide">
-            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" /></div>
-          <div class="swiper-slide">
-            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" /></div>
-          <div class="swiper-slide">
-            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" /></div>
-            <div class="swiper-slide">
-                <img src="img/Guia Front-end.svg" alt="Livro sobre Guia Front-end" /></div>
-                <div class="swiper-slide">
-                    <img src="img/Portugol.svg" alt="Livro sobre Portugol" /></div>
-                    <div class="swiper-slide">
-                        <img src="img/Acessibilidade.svg" alt="Livro sobre ACessibilidade" />
+            <img src="img/ApacheKafka.svg" alt=" Livro sobre ApacheKafka" />
           </div>
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
+          <div class="swiper-slide">
+            <img src="img/Liderança.svg" alt="Livro sobre Lideranca" />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Javascript.svg" alt="Livro sobre JavaScript" />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="img/Guia Front-end.svg"
+              alt="Livro sobre Guia Front-end"
+            />
+          </div>
+          <div class="swiper-slide">
+            <img src="img/Portugol.svg" alt="Livro sobre Portugol" />
+          </div>
+          <div class="swiper-slide">
+            <img
+              src="img/Acessibilidade.svg"
+              alt="Livro sobre ACessibilidade"
+            />
+          </div>
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
+        </div>
       </div>
       <div class="card2">
         <div class="card2__descricao">
           <div class="descricao2">
             <h3 class="descricao2__titulo">Autora do Mês</h3>
             <h2 class="descricao2__titulo-livro">Amanda Campos</h2>
-            <p class="descricao2__texto">Estudante de Engenharia de Software com foco em  Front-End. </p>
+            <p class="descricao2__texto">
+              Estudante de Engenharia de Software com foco em Front-End.
+            </p>
           </div>
-          <img src="img/amanda.svg" class="descricao2__imagem" alt="Imagem Angular">
+          <img
+            src="img/amanda.svg"
+            class="descricao2__imagem"
+            alt="Imagem Angular"
+          />
         </div>
         <div class="card2__botoes">
           <ul class="botoes2">
-            <li class="botoes2__item"><img src= "img/Favoritos.svg" alt="Favoritar livro"</li>
-            <li class="botoes2__item"><img src="img/Compras.svg" alt="Adicionar no carrinho de compras"></li>
+            <li class="botoes2__item">
+              <img src= "img/Favoritos.svg" alt="Favoritar livro"
+            </li>
+            <li class="botoes2__item">
+              <img
+                src="img/Compras.svg"
+                alt="Adicionar no carrinho de compras"
+              />
+            </li>
           </ul>
           <a href="#" class="botoes2__ancora">Saiba mais</a>
         </div>
       </div>
     </section>
+    <section class="topicos">
+      <h2 class="topicos__titulo">TÓPICOS VISITADOS RECENTEMENTE</h2>
+      <ul class="topicos__lista">
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Android</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Agile</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Startups</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">HTML & CSS</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Python</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">OO</a>
+        </li>
+        <li class="topicos__item">
+          <a href="#" class="topicos__link">Java</a>
+        </li>
+      </ul>
+    </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
     <script>
-        const swiper = new Swiper('.swiper', {
-            spaceBetween: 10,
-            slidesPerView: 3,
-            pagination: {
-    el: '.swiper-pagination',
-    type: 'bullets',
-  },
-
-        });
+      const swiper = new Swiper(".swiper", {
+        spaceBetween: 10,
+        slidesPerView: 3,
+        pagination: {
+          el: ".swiper-pagination",
+          type: "bullets",
+        },
+      });
     </script>
   </body>
 </html>
